japis/lab3/XMLLangParser.py
# Generated from XMLLang.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class XMLLangParser ( Parser ):

    grammarFileName = "XMLLang.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'{'", "'}'", "<INVALID>", "<INVALID>", 
                     "'and'", "'break'", "'case'", "'continue'", "'def'", 
                     "'else'", "'except'", "'False'", "'finally'", "'for'", 
                     "'if'", "'in'", "'switch'", "'None'", "'not'", "'or'", 
                     "'raise'", "'return'", "'True'", "'try'", "'while'", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "'.'", "'('", "')'", "'['", "']'", "','", "':'", "';'", 
                     "'='", "'+'", "'-'", "'=='", "'!='" ]

    symbolicNames = [ "<INVALID>", "INDENT", "DEDENT", "STRING", "NUMBER", 
                      "AND", "BREAK", "CASE", "CONTINUE", "DEF", "ELSE", 
                      "EXCEPT", "FALSE", "FINALLY", "FOR", "IF", "IN", "SWITCH", 
                      "NONE", "NOT", "OR", "RAISE", "RETURN", "TRUE", "TRY", 
                      "WHILE", "WS", "NEWLINE", "ID", "DECIMAL_INTEGER", 
                      "DOT", "OPEN_PAREN", "CLOSE_PAREN", "OPEN_BRACK", 
                      "CLOSE_BRACK", "COMMA", "COLON", "SEMI_COLON", "ASSIGN", 
                      "ADD", "MINUS", "EQUALS", "NOT_EQ_2", "UNKNOWN_CHAR" ]

    RULE_program = 0
    RULE_funcDef = 1
    RULE_parameters = 2
    RULE_typedargslist = 3
    RULE_block = 4
    RULE_statement = 5
    RULE_simple_statements = 6
    RULE_simple_statement = 7
    RULE_expr_statement = 8
    RULE_testlist_star_expr = 9
    RULE_flow_statement = 10
    RULE_compound_statement = 11
    RULE_if_statement = 12
    RULE_while_statement = 13
    RULE_for_statement = 14
    RULE_try_statement = 15
    RULE_except_clause = 16
    RULE_switch_statement = 17
    RULE_case_block = 18
    RULE_pattern = 19
    RULE_closed_pattern = 20
    RULE_literal_pattern = 21
    RULE_value_pattern = 22
    RULE_attr = 23
    RULE_test = 24
    RULE_and_test = 25
    RULE_not_test = 26
    RULE_comparison = 27
    RULE_comp_op = 28
    RULE_expr = 29
    RULE_atom_expr = 30
    RULE_atom = 31
    RULE_trailer = 32
    RULE_exprlist = 33
    RULE_testlist = 34
    RULE_arglist = 35
    RULE_argument = 36

    ruleNames =  [ "program", "funcDef", "parameters", "typedargslist", 
                   "block", "statement", "simple_statements", "simple_statement", 
                   "expr_statement", "testlist_star_expr", "flow_statement", 
                   "compound_statement", "if_statement", "while_statement", 
                   "for_statement", "try_statement", "except_clause", "switch_statement", 
                   "case_block", "pattern", "closed_pattern", "literal_pattern", 
                   "value_pattern", "attr", "test", "and_test", "not_test", 
                   "comparison", "comp_op", "expr", "atom_expr", "atom", 
                   "trailer", "exprlist", "testlist", "arglist", "argument" ]

    EOF = Token.EOF
    INDENT=1
    DEDENT=2
    STRING=3
    NUMBER=4
    AND=5
    BREAK=6
    CASE=7
    CONTINUE=8
    DEF=9
    ELSE=10
    EXCEPT=11
    FALSE=12
    FINALLY=13
    FOR=14
    IF=15
    IN=16
    SWITCH=17
    NONE=18
    NOT=19
    OR=20
    RAISE=21
    RETURN=22
    TRUE=23
    TRY=24
    WHILE=25
    WS=26
    NEWLINE=27
    ID=28
    DECIMAL_INTEGER=29
    DOT=30
    OPEN_PAREN=31
    CLOSE_PAREN=32
    OPEN_BRACK=33
    CLOSE_BRACK=34
    COMMA=35
    COLON=36
    SEMI_COLON=37
    ASSIGN=38
    ADD=39
    MINUS=40
    EQUALS=41
    NOT_EQ_2=42
    UNKNOWN_CHAR=43

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(XMLLangParser.EOF, 0)

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(XMLLangParser.StatementContext)
            else:
                return self.getTypedRuleContext(XMLLangParser.StatementContext,i)


        def funcDef(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(XMLLangParser.FuncDefContext)
            else:
                return self.getTypedRuleContext(XMLLangParser.FuncDefContext,i)


        def getRuleIndex(self):
            return XMLLangParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)




    def program(self):

        localctx = XMLLangParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 78
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 334418776) != 0):
                self.state = 76
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,0,self._ctx)
                if la_ == 1:
                    self.state = 74
                    self.statement()
                    pass

                elif la_ == 2:
                    self.state = 75
                    self.funcDef()
                    pass


                self.state = 80
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 81
            self.match(XMLLangParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FuncDefContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def DEF(self):
            return self.getToken(XMLLangParser.DEF, 0)

        def ID(self):
            return self.getToken(XMLLangParser.ID, 0)

        def parameters(self):
            return self.getTypedRuleContext(XMLLangParser.ParametersContext,0)


        def block(self):
            return self.getTypedRuleContext(XMLLangParser.BlockContext,0)


        def getRuleIndex(self):
            return XMLLangParser.RULE_funcDef

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFuncDef" ):
                listener.enterFuncDef(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFuncDef" ):
                listener.exitFuncDef(self)




    def funcDef(self):

        localctx = XMLLangParser.FuncDefContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_funcDef)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 83
            self.match(XMLLangParser.DEF)
            self.state = 84
            self.match(XMLLangParser.ID)
            self.state = 85
            self.parameters()
            self.state = 86
            self.block()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParametersContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def OPEN_PAREN(self):
            return self.getToken(XMLLangParser.OPEN_PAREN, 0)

        def CLOSE_PAREN(self):
            return self.getToken(XMLLangParser.CLOSE_PAREN, 0)

        def typedargslist(self):
            return self.getTypedRuleContext(XMLLangParser.TypedargslistContext,0)


        def getRuleIndex(self):
            return XMLLangParser.RULE_parameters

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParameters" ):
                listener.enterParameters(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParameters" ):
                listener.exitParameters(self)




    def parameters(self):

        localctx = XMLLangParser.ParametersContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_parameters)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 88
            self.match(XMLLangParser.OPEN_PAREN)
            self.state = 90
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==28:
                self.state = 89
                self.typedargslist()


            self.state = 92
            self.match(XMLLangParser.CLOSE_PAREN)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TypedargslistContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(XMLLangParser.ID)
            else:
                return self.getToken(XMLLangParser.ID, i)

        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(XMLLangParser.COMMA)
            else:
                return self.getToken(XMLLangParser.COMMA, i)

        def getRuleIndex(self):
            return XMLLangParser.RULE_typedargslist

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTypedargslist" ):
                listener.enterTypedargslist(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTypedargslist" ):
                listener.exitTypedargslist(self)




    def typedargslist(self):

        localctx = XMLLangParser.TypedargslistContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_typedargslist)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 94
            self.match(XMLLangParser.ID)
            self.state = 101
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==35:
                self.state = 95
                self.match(XMLLangParser.COMMA)
                self.state = 97
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==28:
                    self.state = 96
                    self.match(XMLLangParser.ID)


                self.state = 103
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BlockContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INDENT(self):
            return self.getToken(XMLLangParser.INDENT, 0)

        def DEDENT(self):
            return self.getToken(XMLLangParser.DEDENT, 0)

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(XMLLangParser.StatementContext)
            else:
                return self.getTypedRuleContext(XMLLangParser.StatementContext,i)


        def getRuleIndex(self):
            return XMLLangParser.RULE_block

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBlock" ):
                listener.enterBlock(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBlock" ):
                listener.exitBlock(self)




    def block(self):

        localctx = XMLLangParser.BlockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_block)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 104
            self.match(XMLLangParser.INDENT)
            self.state = 106 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 105
                self.statement()
                self.state = 108 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & 334418776) != 0)):
                    break

            self.state = 110
            self.match(XMLLangParser.DEDENT)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def simple_statements(self):
            return self.getTypedRuleContext(XMLLangParser.Simple_statementsContext,0)


        def compound_statement(self):
            return self.getTypedRuleContext(XMLLangParser.Compound_statementContext,0)


        def getRuleIndex(self):
            return XMLLangParser.RULE_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatement" ):
                listener.enterStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatement" ):
                listener.exitStatement(self)




    def statement(self):

        localctx = XMLLangParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_statement)
        try:
            self.state = 114
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [3, 4, 6, 8, 12, 18, 19, 21, 22, 23, 28]:
                self.enterOuterAlt(localctx, 1)
                self.state = 112
                self.simple_statements()
                pass
            elif token in [9, 14, 15, 17, 24, 25]:
                self.enterOuterAlt(localctx, 2)
                self.state = 113
                self.compound_statement()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Simple_statementsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def simple_statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(XMLLangParser.Simple_statementContext)
            else:
                return self.getTypedRuleContext(XMLLangParser.Simple_statementContext,i)


        def SEMI_COLON(self, i:int=None):
            if i is None:
                return self.getTokens(XMLLangParser.SEMI_COLON)
            else:
                return self.getToken(XMLLangParser.SEMI_COLON, i)

        def getRuleIndex(self):
            return XMLLangParser.RULE_simple_statements

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSimple_statements" ):
                listener.enterSimple_statements(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSimple_statements" ):
                listener.exitSimple_statements(self)




    def simple_statements(self):

        localctx = XMLLangParser.Simple_statementsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_simple_statements)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 116
            self.simple_statement()
            self.state = 121
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,7,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 117
                    self.match(XMLLangParser.SEMI_COLON)
                    self.state = 118
                    self.simple_statement() 
                self.state = 123
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,7,self._ctx)

            self.state = 125
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==37:
                self.state = 124
                self.match(XMLLangParser.SEMI_COLON)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Simple_statementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expr_statement(self):
            return self.getTypedRuleContext(XMLLangParser.Expr_statementContext,0)


        def flow_statement(self):
            return self.getTypedRuleContext(XMLLangParser.Flow_statementContext,0)


        def getRuleIndex(self):
            return XMLLangParser.RULE_simple_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSimple_statement" ):
                listener.enterSimple_statement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSimple_statement" ):
                listener.exitSimple_statement(self)




    def simple_statement(self):

        localctx = XMLLangParser.Simple_statementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_simple_statement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 129
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [3, 4, 12, 18, 19, 23, 28]:
                self.state = 127
                self.expr_statement()
                pass
            elif token in [6, 8, 21, 22]:
                self.state = 128
                self.flow_statement()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Expr_statementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def testlist_star_expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(XMLLangParser.Testlist_star_exprContext)
            else:
                return self.getTypedRuleContext(XMLLangParser.Testlist_star_exprContext,i)


        def ASSIGN(self, i:int=None):
            if i is None:
                return self.getTokens(XMLLangParser.ASSIGN)
            else:
                return self.getToken(XMLLangParser.ASSIGN, i)

        def getRuleIndex(self):
            return XMLLangParser.RULE_expr_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpr_statement" ):
                listener.enterExpr_statement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpr_statement" ):
                listener.exitExpr_statement(self)




    def expr_statement(self):

        localctx = XMLLangParser.Expr_statementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_expr_statement)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 131
            self.testlist_star_expr()
            self.state = 136
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==38:
                self.state = 132
                self.match(XMLLangParser.ASSIGN)
                self.state = 133
                self.testlist_star_expr()
                self.state = 138
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Testlist_star_exprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def test(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(XMLLangParser.TestContext)
            else:
                return self.getTypedRuleContext(XMLLangParser.TestContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(XMLLangParser.COMMA)
            else:
                return self.getToken(XMLLangParser.COMMA, i)

        def getRuleIndex(self):
            return XMLLangParser.RULE_testlist_star_expr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTestlist_star_expr" ):
                listener.enterTestlist_star_expr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTestlist_star_expr" ):
                listener.exitTestlist_star_expr(self)




    def testlist_star_expr(self):

        localctx = XMLLangParser.Testlist_star_exprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_testlist_star_expr)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 139
            self.test()
            self.state = 144
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,11,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 140
                    self.match(XMLLangParser.COMMA)
                    self.state = 141
                    self.test() 
                self.state = 146
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,11,self._ctx)

            self.state = 148
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==35:
                self.state = 147
                self.match(XMLLangParser.COMMA)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Flow_statementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def BREAK(self):
            return self.getToken(XMLLangParser.BREAK, 0)

        def CONTINUE(self):
            return self.getToken(XMLLangParser.CONTINUE, 0)

        def RETURN(self):
            return self.getToken(XMLLangParser.RETURN, 0)

        def testlist(self):
            return self.getTypedRuleContext(XMLLangParser.TestlistContext,0)


        def RAISE(self):
            return self.getToken(XMLLangParser.RAISE, 0)

        def test(self):
            return self.getTypedRuleContext(XMLLangParser.TestContext,0)


        def getRuleIndex(self):
            return XMLLangParser.RULE_flow_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFlow_statement" ):
                listener.enterFlow_statement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFlow_statement" ):
                listener.exitFlow_statement(self)




    def flow_statement(self):

        localctx = XMLLangParser.Flow_statementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_flow_statement)
        try:
            self.state = 160
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [6]:
                self.enterOuterAlt(localctx, 1)
                self.state = 150
                self.match(XMLLangParser.BREAK)
                pass
            elif token in [8]:
                self.enterOuterAlt(localctx, 2)
                self.state = 151
                self.match(XMLLangParser.CONTINUE)
                pass
            elif token in [22]:
                self.enterOuterAlt(localctx, 3)
                self.state = 152
                self.match(XMLLangParser.RETURN)
                self.state = 154
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,13,self._ctx)
                if la_ == 1:
                    self.state = 153
                    self.testlist()


                pass
            elif token in [21]:
                self.enterOuterAlt(localctx, 4)
                self.state = 156
                self.match(XMLLangParser.RAISE)
                self.state = 158
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,14,self._ctx)
                if la_ == 1:
                    self.state = 157
                    self.test()


                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Compound_statementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def if_statement(self):
            return self.getTypedRuleContext(XMLLangParser.If_statementContext,0)


        def while_statement(self):
            return self.getTypedRuleContext(XMLLangParser.While_statementContext,0)


        def for_statement(self):
            return self.getTypedRuleContext(XMLLangParser.For_statementContext,0)


        def try_statement(self):
            return self.getTypedRuleContext(XMLLangParser.Try_statementContext,0)


        def funcDef(self):
            return self.getTypedRuleContext(XMLLangParser.FuncDefContext,0)


        def switch_statement(self):
            return self.getTypedRuleContext(XMLLangParser.Switch_statementContext,0)


        def getRuleIndex(self):
            return XMLLangParser.RULE_compound_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCompound_statement" ):
                listener.enterCompound_statement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCompound_statement" ):
                listener.exitCompound_statement(self)




    def compound_statement(self):

        localctx = XMLLangParser.Compound_statementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_compound_statement)
        try:
            self.state = 168
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [15]:
                self.enterOuterAlt(localctx, 1)
                self.state = 162
                self.if_statement()
                pass
            elif token in [25]:
                self.enterOuterAlt(localctx, 2)
                self.state = 163
                self.while_statement()
                pass
            elif token in [14]:
                self.enterOuterAlt(localctx, 3)
                self.state = 164
                self.for_statement()
                pass
            elif token in [24]:
                self.enterOuterAlt(localctx, 4)
                self.state = 165
                self.try_statement()
                pass
            elif token in [9]:
                self.enterOuterAlt(localctx, 5)
                self.state = 166
                self.funcDef()
                pass
            elif token in [17]:
                self.enterOuterAlt(localctx, 6)
                self.state = 167
                self.switch_statement()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class If_statementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IF(self):
            return self.getToken(XMLLangParser.IF, 0)

        def test(self):
            return self.getTypedRuleContext(XMLLangParser.TestContext,0)


        def block(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(XMLLangParser.BlockContext)
            else:
                return self.getTypedRuleContext(XMLLangParser.BlockContext,i)


        def ELSE(self):
            return self.getToken(XMLLangParser.ELSE, 0)

        def getRuleIndex(self):
            return XMLLangParser.RULE_if_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIf_statement" ):
                listener.enterIf_statement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIf_statement" ):
                listener.exitIf_statement(self)




    def if_statement(self):

        localctx = XMLLangParser.If_statementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_if_statement)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 170
            self.match(XMLLangParser.IF)
            self.state = 171
            self.test()
            self.state = 172
            self.block()
            self.state = 175
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==10:
                self.state = 173
                self.match(XMLLangParser.ELSE)
                self.state = 174
                self.block()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class While_statementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def WHILE(self):
            return self.getToken(XMLLangParser.WHILE, 0)

        def test(self):
            return self.getTypedRuleContext(XMLLangParser.TestContext,0)


        def block(self):
            return self.getTypedRuleContext(XMLLangParser.BlockContext,0)


        def getRuleIndex(self):
            return XMLLangParser.RULE_while_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterWhile_statement" ):
                listener.enterWhile_statement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitWhile_statement" ):
                listener.exitWhile_statement(self)




    def while_statement(self):
